# haskell-first-principles

./: haskell-first-principles.cabal
src/: Adt.hs  Arith.hs  Chap11.hs  Chap12.hs  Chap13.hs  Chap15.hs  Chap16.hs  Chap17.hs  Chap18.hs  Chap20.hs  Chap22.hs  ChapEleven.hs  ChapThirteen.hs  ChapTwelve.hs  Cipher.hs  EitherMonad.hs  Folds.hs  FunctionWithLet.hs  Jammin.hs  NormalForm.hs  Print1.hs  Print3.hs  Programmer.hs  ReplaceExperiment.hs  Sing.hs  chapfivetypes.hs  greetIfCool1.hs  learn.hs  print3Flipped.hs  test.hs  typeInference1.hs
test/: Chap14.hs
