name:                haskell-first-principles
version:             0.1.0.0
synopsis:            Solutions for the haskell book
description:         Please see README.md
homepage:            https://github.com/punitrathore/haskell-first-principles
license:             BSD3
license-file:        LICENSE
author:              Punit Rathore
maintainer:          punitr__at__gmail.com
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5, time >= 1.5.0
  default-language:    Haskell2010

executable haskell-first-principles-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-first-principles
  default-language:    Haskell2010

test-suite haskell-first-principles-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-first-principles
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-first-principles
